webpack 설치 및 설정

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
     <head>
         <meta charset="UTF-8" />
         <title>Webpack</title>
     </head>
     <body>
         <div id="root"></div>
-        <script src="index.js"></script>
+        <script src="dist/main.js"></script>
     </body>
 </html>
